# tandem

./: .env.example  .gitattributes  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  biome.json  cowork-sync.md  eslint.config.js  index.html  knip.json  marketplace-fix.md  package-lock.json  package.json  playwright.config.ts  svelte-harness.html  tsconfig.client.json  tsconfig.json  tsconfig.server.json  tsup.config.ts  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: annotation-model-reviewer.md  crdt-reviewer.md  diverge-biology.md  diverge-critic.md  diverge-deletionist.md  diverge-future-self.md  diverge-on-call.md  diverge-regulator.md  diverge-speedrunner.md  security-reviewer.md  svelte-migration-reviewer.md
.claude/commands/: diverge.md
.claude/hooks/: README.md  _workflow-state.sh  block-e2e-port-kill.sh  block-no-verify.sh  block-plan-without-agent-review.mjs  block-plan-without-agent-review.sh  block-sensitive.sh  check-console-log.sh  check-extract-markdown.sh  check-raw-transact.sh  check-token-violation.sh  check-ymap-keys.sh  format-on-edit.sh  nudge-plan-review.sh  nudge-pr-review.sh  nudge-simplify-before-commit.sh  related-test.sh  sessionstart-prune-state.sh  stop-cycle-check.sh  svelte-check-on-edit.sh  track-workflow-events.sh  typecheck-on-edit.sh
.claude/knowledge-graph/: README.md  edges.json
.claude/notes/: pr-review-759-2026-05-18.md  pr-review-760-2026-05-18.md  pr-review-761-2026-05-18.md  pr-review-762-2026-05-18.md  pr-review-763-2026-05-18.md  pr-review-764-2026-05-18.md  pr-review-765-2026-05-18.md  pr-review-summary-2026-05-18.md  redesign-deferred-needs-input.md
.claude/reviews/: ar1-stash.sha  issue-pipeline-skill-plan-review-content.md  meta-plan.codex.md  pr-577.codex.md  pr-577.diff  pr-577.summary.md  pr-578.codex.md  pr-578.diff  pr-578.summary.md  pr-579.codex.md  pr-579.diff  pr-579.summary.md  pr-580.codex.md  pr-580.diff  pr-580.summary.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude-review.yml  codeql.yml  publish.yml  seed-design-baselines.yml  tauri-release.yml  tauri-webdriver.yml
.husky/: pre-commit  pre-push
docs/: 428-macos-notarization-runbook.md  agent-workflow.md  annotation-redesign-design-brief.md  annotation-system-analysis.md  architecture.md  audit-v1.md  audit-v2-followups-plan.md  audit-v2.md  audit-v3-docs.md  claude-design-response-prompt.md  cli.md  configuration.md  data-locations.md  decisions.md  lessons-learned.md  licensing-operations.md  mcp-tools.md  overlay-api.md  phase-3-plan.md  positioning.md  redesign-acceptance-matrix.md  redesign-review.md  release-smoke-checklist.md  roadmap.md  run-b-plan.md  security.md  semantic-tokens.md  spec.md  tauri-plan.md  troubleshooting.md  user-guide.md  ux-opportunities.md  v011-plan.md  v090-plan.md  v10-triage.md  workflows.md
docs/archive/: README.md  agent-isolation-research.md
docs/assets/: preview.html
docs/design-notes/: toolbar-ux-research.md
docs/design-system-impl/: 3.5-coordination-handoff.md  R-rail-rebuild-plan.md  baseline-procedure.md  changelog-strategy.md  conflicts-resolved.md  derived-spec.md  motion.md  perf-baseline.md  testid-manifest.md  token-audit.md  tutorial-anchor-manifest.md
docs/plans/: 1123-m1a-model-registry-relocation.md  1123-m2-model-registry-server-authority.md  1123-m2b-models-ui-mount.md  1123-m3-provider-authorship.md  1123-m4-dark-mechanism.md  1150-docx-import-dedup-offset-drift.md  2026-04-17-pr346-review-fixes.md  2026-04-17-v0.6.3-release.md  2026-05-21-v0.13.0-release.md  2026-05-25-1.11-selection-surface.md  2026-05-25-1.12-slash-menu.md  2026-05-25-1.13-decorations-control.md  2026-05-28-stage-c-cleave-locks.md  2026-05-28-stage-c1-margin-mode-continuum.md  2026-05-28-stage-c2-density-variants.md  2026-05-28-stage-c3-bezier-leaders-anchor-dots.md  2026-05-29-stage-d-motion.md  2026-06-11-local-models-v1-rescope.md  2026-06-11-v1-roadmap-reconciliation.md  477-pr-3c-ii-auto-config-removal.md  cowork-detection-airtight.md  cowork-detection-review-fixes.md  cowork-transport-test-matrix.md  diagnostics-surface.md  pre-write-doc-backups.md  stale-tab-resync.md  uninstall-scrub-docs-sweep.md
docs/redesign-bundle/: README.md
docs/spikes/: ai-readiness-mcp-session.md  cli-session-resume-spike.md  docx-libreoffice-spike.md  docx-npm-spike.md  linux-container-install-smoke.md  local-llm-capability-spike.md  marketplace-install-spike.md  per-client-identity-spec.md  plugin-monitor-viability-spike.md  session-identity-transport-probe.md  sidecar-launcher-spike.md  skills-autoload-2.1.157-verification.md  updater-rollback-healthpoll-audit.md
infra/license-issuance-worker/: README.md  wrangler.toml
infra/license-update-worker/: README.md  wrangler.toml
probe/local-model-spike/: analyze-fallback-fails.ts  batch-fallback.ts  batch.ts  check-envelope.ts  dogfood-m1.ts  fallback.ts  generate-envelope.ts  (+14 more)
reaper/: Cargo.toml  smoke-test.ps1
reaper/src/: common.rs  linux.rs  macos.rs  main.rs  windows.rs
sample/: demo-script.md  table-test.md  welcome.md
scripts/: audit-origins.ts  audit-ymap-keys.ts  build-reaper.mjs  check-font-assets.mjs  check-semantic-tokens.ts  cleanup-changelog-escapes.ts  dev-standalone.mjs  doctor.mjs  download-node-sidecar.mjs  e2e-server.mjs  generate-keys.ts  kg-lint.mjs  kg.mjs  normalize-eol.mjs  render-logotype.mjs  sign-license.ts  take-screenshots.mjs
src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: cowork_atomic_json.rs  cowork_installer.rs  cowork_meta.rs  cowork_workspace_scan.rs  firewall.rs  integrations_probe.rs  keychain.rs  lib.rs  sentry_reporting.rs  sidecar_job.rs  token_store.rs
src-tauri/tests/: file_association.rs  keychain.rs  prevent_default.rs
src-tauri/windows/: installer-hook.nsi
tests/: plugin-manifest.test.ts
(+1182 files in other folders)
