[package]
name = "tandem-reaper"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Cross-platform process reaper: spawns a child and guarantees it dies when this process's parent dies"
license = "BSL-1.1"
repository = "https://github.com/bloknayrb/tandem"

[[bin]]
name = "tandem-reaper"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "event"] }
libc = "0.2"
