[package]
name = "tandem-desktop"
version = "0.8.0"
description = "Collaborative AI-human document editor"
authors = ["Bryan Kolb"]
license = "MIT"
repository = "https://github.com/bloknayrb/tandem"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["time", "macros"] }
keyring = "3"
base64 = "0.22"
dirs = "6"
rand = "0.8"
fs2 = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"

[features]
# Test-only hooks: TANDEM_COWORK_ROOT_OVERRIDE env-var reads.
# Auto-enabled for `cargo test` via `#[cfg(test)]`; OFF for `cargo build --release`.
cowork-test-hooks = []

[dev-dependencies]
tempfile = "3"
