[package]
name = "tandem-desktop"
version = "0.19.0"
description = "Collaborative AI-human document editor"
authors = ["Bryan Kolb"]
license = "BUSL-1.1"
repository = "https://github.com/bloknayrb/tandem"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# Crash reporting (#921), opt-in / off by default. `sentry::init` with an empty
# DSN yields a disabled (no-op) client. The default feature set does NOT install
# a global `tracing` subscriber (only the optional `sentry-tracing` integration
# does), so there is no collision with `tauri-plugin-log` or the `devtools`
# feature — both of which own the global subscriber. The minidump handler is
# re-exported by the plugin (`tauri_plugin_sentry::minidump`); no separate
# `sentry-rust-minidump` dependency is needed.
sentry = "0.42"
tauri-plugin-sentry = "0.5"
# linux-libxdo: makes native Cut/Copy/Paste/Select All PredefinedMenuItems work
# on Linux (muda uses libxdo to synthesize them); off by default. Required by
# the editor context menu (#923).
# This adds a hard DT_NEEDED on libxdo.so.3, which the bundler does NOT infer:
# the matching deb/rpm `depends` live in tauri.conf.json and must stay in sync.
# Shipping without them made the app unlaunchable for 9 releases (#1227).
tauri = { version = "2.11.1", features = ["tray-icon", "linux-libxdo"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["time", "macros"] }
keyring = "3"
base64 = "0.22"
dirs = "6"
rand = "0.8"
fs2 = "0.4"
# CrabNebula DevTools (IPC/event/log inspector). Optional + behind the
# `devtools` feature so release builds exclude it from the dependency graph
# entirely (Cargo can't gate deps on `cfg(debug_assertions)`). Enable in dev
# with `cargo tauri dev --features devtools`. See #924.
tauri-plugin-devtools = { version = "2", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-prevent-default = "5"
tauri-plugin-decorum = "1"

# Windows-only DWM bindings: force rounded window corners (DWMWCP_ROUND) so
# snapping/maximizing keeps the floating-chrome rounded surface, and suppress
# the borderless-window outline (DWMWA_BORDER_COLOR = DWMWA_COLOR_NONE). See #984.
# Job-object + threading bindings (#987): bind the Node sidecar to a
# kill-on-job-close job object so it dies with the shell even on ungraceful exit.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[features]
# Test-only hooks: TANDEM_COWORK_ROOT_OVERRIDE env-var reads.
# Auto-enabled for `cargo test` via `#[cfg(test)]`; OFF for `cargo build --release`.
cowork-test-hooks = []
# Enables CrabNebula DevTools instrumentation. Dev-only — never pass this for a
# release build. Mutually exclusive with tauri-plugin-log at runtime (both
# install a global tracing subscriber); the log plugin is gated off when this is on.
devtools = ["dep:tauri-plugin-devtools"]

[dev-dependencies]
tempfile = "3"
tauri-plugin-prevent-default = "5"
